--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
+    "react-router-hooks": "^1.0.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
