--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.3.0",
+    "firebase": "^8.2.2",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
