--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.3.0",
+    "bootstrap": "^4.5.3",
     "firebase": "^8.2.2",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
+    "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
